MFC r256800: pathchk: Ensure bytes >= 128 are considered non-portable characters.

This was not broken on architectures such as ARM where char is unsigned.

Also, remove the first non-portable character from the output. POSIX does
not require this, and printing the first byte may yield an invalid byte
sequence with UTF-8.

PR:		165988
Reported by:	Nicolas Rachinsky
Relnotes:	yes